language-bindings/python/src/wamr/wamrapi/iwasm.py


# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1004
if _libs["../libs/libiwasm.so"].has("wasm_runtime_addr_app_to_native", "cdecl"):
    wasm_runtime_addr_app_to_native = _libs["../libs/libiwasm.so"].get("wasm_runtime_addr_app_to_native", "cdecl")
    wasm_runtime_addr_app_to_native.argtypes = [wasm_module_inst_t, uint32_t]
    wasm_runtime_addr_app_to_native.restype = POINTER(c_ubyte)
    wasm_runtime_addr_app_to_native.errcheck = lambda v,*a : cast(v, c_void_p)

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1017
if _libs["../libs/libiwasm.so"].has("wasm_runtime_addr_native_to_app", "cdecl"):
    wasm_runtime_addr_native_to_app = _libs["../libs/libiwasm.so"].get("wasm_runtime_addr_native_to_app", "cdecl")
    wasm_runtime_addr_native_to_app.argtypes = [wasm_module_inst_t, POINTER(None)]
    wasm_runtime_addr_native_to_app.restype = uint32_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1031
if _libs["../libs/libiwasm.so"].has("wasm_runtime_get_app_addr_range", "cdecl"):
    wasm_runtime_get_app_addr_range = _libs["../libs/libiwasm.so"].get("wasm_runtime_get_app_addr_range", "cdecl")
    wasm_runtime_get_app_addr_range.argtypes = [wasm_module_inst_t, uint32_t, POINTER(uint32_t), POINTER(uint32_t)]
    wasm_runtime_get_app_addr_range.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1050
if _libs["../libs/libiwasm.so"].has("wasm_runtime_get_native_addr_range", "cdecl"):
    wasm_runtime_get_native_addr_range = _libs["../libs/libiwasm.so"].get("wasm_runtime_get_native_addr_range", "cdecl")
    wasm_runtime_get_native_addr_range.argtypes = [wasm_module_inst_t, POINTER(uint8_t), POINTER(POINTER(uint8_t)), POINTER(POINTER(uint8_t))]
    wasm_runtime_get_native_addr_range.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1089
if _libs["../libs/libiwasm.so"].has("wasm_runtime_register_natives", "cdecl"):
    wasm_runtime_register_natives = _libs["../libs/libiwasm.so"].get("wasm_runtime_register_natives", "cdecl")
    wasm_runtime_register_natives.argtypes = [String, POINTER(NativeSymbol), uint32_t]
    wasm_runtime_register_natives.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1104
if _libs["../libs/libiwasm.so"].has("wasm_runtime_register_natives_raw", "cdecl"):
    wasm_runtime_register_natives_raw = _libs["../libs/libiwasm.so"].get("wasm_runtime_register_natives_raw", "cdecl")
    wasm_runtime_register_natives_raw.argtypes = [String, POINTER(NativeSymbol), uint32_t]
    wasm_runtime_register_natives_raw.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1123
if _libs["../libs/libiwasm.so"].has("wasm_runtime_unregister_natives", "cdecl"):
    wasm_runtime_unregister_natives = _libs["../libs/libiwasm.so"].get("wasm_runtime_unregister_natives", "cdecl")
    wasm_runtime_unregister_natives.argtypes = [String, POINTER(NativeSymbol)]
    wasm_runtime_unregister_natives.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1133
if _libs["../libs/libiwasm.so"].has("wasm_runtime_get_function_attachment", "cdecl"):
    wasm_runtime_get_function_attachment = _libs["../libs/libiwasm.so"].get("wasm_runtime_get_function_attachment", "cdecl")
    wasm_runtime_get_function_attachment.argtypes = [wasm_exec_env_t]
    wasm_runtime_get_function_attachment.restype = POINTER(c_ubyte)
    wasm_runtime_get_function_attachment.errcheck = lambda v,*a : cast(v, c_void_p)

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1143
if _libs["../libs/libiwasm.so"].has("wasm_runtime_set_user_data", "cdecl"):
    wasm_runtime_set_user_data = _libs["../libs/libiwasm.so"].get("wasm_runtime_set_user_data", "cdecl")
    wasm_runtime_set_user_data.argtypes = [wasm_exec_env_t, POINTER(None)]
    wasm_runtime_set_user_data.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1152
if _libs["../libs/libiwasm.so"].has("wasm_runtime_get_user_data", "cdecl"):
    wasm_runtime_get_user_data = _libs["../libs/libiwasm.so"].get("wasm_runtime_get_user_data", "cdecl")
    wasm_runtime_get_user_data.argtypes = [wasm_exec_env_t]
    wasm_runtime_get_user_data.restype = POINTER(c_ubyte)
    wasm_runtime_get_user_data.errcheck = lambda v,*a : cast(v, c_void_p)

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1165
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_dump_mem_consumption", "cdecl"):
        continue
    wasm_runtime_dump_mem_consumption = _lib.get("wasm_runtime_dump_mem_consumption", "cdecl")
    wasm_runtime_dump_mem_consumption.argtypes = [wasm_exec_env_t]
    wasm_runtime_dump_mem_consumption.restype = None
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1173
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_dump_perf_profiling", "cdecl"):
        continue
    wasm_runtime_dump_perf_profiling = _lib.get("wasm_runtime_dump_perf_profiling", "cdecl")
    wasm_runtime_dump_perf_profiling.argtypes = [wasm_module_inst_t]
    wasm_runtime_dump_perf_profiling.restype = None
    break

wasm_thread_callback_t = CFUNCTYPE(UNCHECKED(POINTER(c_ubyte)), wasm_exec_env_t, POINTER(None))# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1176

wasm_thread_t = uintptr_t# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1178

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1186
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_set_max_thread_num", "cdecl"):
        continue
    wasm_runtime_set_max_thread_num = _lib.get("wasm_runtime_set_max_thread_num", "cdecl")
    wasm_runtime_set_max_thread_num.argtypes = [uint32_t]
    wasm_runtime_set_max_thread_num.restype = None
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1197
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_spawn_exec_env", "cdecl"):
        continue
    wasm_runtime_spawn_exec_env = _lib.get("wasm_runtime_spawn_exec_env", "cdecl")
    wasm_runtime_spawn_exec_env.argtypes = [wasm_exec_env_t]
    wasm_runtime_spawn_exec_env.restype = wasm_exec_env_t
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1205
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_destroy_spawned_exec_env", "cdecl"):
        continue
    wasm_runtime_destroy_spawned_exec_env = _lib.get("wasm_runtime_destroy_spawned_exec_env", "cdecl")
    wasm_runtime_destroy_spawned_exec_env.argtypes = [wasm_exec_env_t]
    wasm_runtime_destroy_spawned_exec_env.restype = None
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1218
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_spawn_thread", "cdecl"):
        continue
    wasm_runtime_spawn_thread = _lib.get("wasm_runtime_spawn_thread", "cdecl")
    wasm_runtime_spawn_thread.argtypes = [wasm_exec_env_t, POINTER(wasm_thread_t), wasm_thread_callback_t, POINTER(None)]
    wasm_runtime_spawn_thread.restype = c_int32
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1230
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_join_thread", "cdecl"):
        continue
    wasm_runtime_join_thread = _lib.get("wasm_runtime_join_thread", "cdecl")
    wasm_runtime_join_thread.argtypes = [wasm_thread_t, POINTER(POINTER(None))]
    wasm_runtime_join_thread.restype = c_int32
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1244
for _lib in _libs.values():
    if not _lib.has("wasm_externref_obj2ref", "cdecl"):
        continue
    wasm_externref_obj2ref = _lib.get("wasm_externref_obj2ref", "cdecl")
    wasm_externref_obj2ref.argtypes = [wasm_module_inst_t, POINTER(None), POINTER(uint32_t)]
    wasm_externref_obj2ref.restype = c_bool
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1257
for _lib in _libs.values():
    if not _lib.has("wasm_externref_ref2obj", "cdecl"):
        continue
    wasm_externref_ref2obj = _lib.get("wasm_externref_ref2obj", "cdecl")
    wasm_externref_ref2obj.argtypes = [uint32_t, POINTER(POINTER(None))]
    wasm_externref_ref2obj.restype = c_bool
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1269
for _lib in _libs.values():
    if not _lib.has("wasm_externref_retain", "cdecl"):
        continue
    wasm_externref_retain = _lib.get("wasm_externref_retain", "cdecl")
    wasm_externref_retain.argtypes = [uint32_t]
    wasm_externref_retain.restype = c_bool
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1277
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_dump_call_stack", "cdecl"):
        continue
    wasm_runtime_dump_call_stack = _lib.get("wasm_runtime_dump_call_stack", "cdecl")
    wasm_runtime_dump_call_stack.argtypes = [wasm_exec_env_t]
    wasm_runtime_dump_call_stack.restype = None
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1288
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_get_call_stack_buf_size", "cdecl"):
        continue
    wasm_runtime_get_call_stack_buf_size = _lib.get("wasm_runtime_get_call_stack_buf_size", "cdecl")
    wasm_runtime_get_call_stack_buf_size.argtypes = [wasm_exec_env_t]
    wasm_runtime_get_call_stack_buf_size.restype = uint32_t
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1304
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_dump_call_stack_to_buf", "cdecl"):
        continue
    wasm_runtime_dump_call_stack_to_buf = _lib.get("wasm_runtime_dump_call_stack_to_buf", "cdecl")
    wasm_runtime_dump_call_stack_to_buf.argtypes = [wasm_exec_env_t, String, uint32_t]
    wasm_runtime_dump_call_stack_to_buf.restype = uint32_t
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1317
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_get_custom_section", "cdecl"):
        continue
    wasm_runtime_get_custom_section = _lib.get("wasm_runtime_get_custom_section", "cdecl")
    wasm_runtime_get_custom_section.argtypes = [wasm_module_t, String, POINTER(uint32_t)]
    wasm_runtime_get_custom_section.restype = POINTER(uint8_t)
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1326
if _libs["../libs/libiwasm.so"].has("wasm_runtime_get_version", "cdecl"):
    wasm_runtime_get_version = _libs["../libs/libiwasm.so"].get("wasm_runtime_get_version", "cdecl")
    wasm_runtime_get_version.argtypes = [POINTER(uint32_t), POINTER(uint32_t), POINTER(uint32_t)]
    wasm_runtime_get_version.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1333
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_is_import_func_linked", "cdecl"):
        continue
    wasm_runtime_is_import_func_linked = _lib.get("wasm_runtime_is_import_func_linked", "cdecl")
    wasm_runtime_is_import_func_linked.argtypes = [String, String]
    wasm_runtime_is_import_func_linked.restype = c_bool
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 1341
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_is_import_global_linked", "cdecl"):
        continue
    wasm_runtime_is_import_global_linked = _lib.get("wasm_runtime_is_import_global_linked", "cdecl")
    wasm_runtime_is_import_global_linked.argtypes = [String, String]
    wasm_runtime_is_import_global_linked.restype = c_bool
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 31
def get_module_inst(exec_env):
    return (wasm_runtime_get_module_inst (exec_env))

WASMModuleCommon = struct_WASMModuleCommon# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 62

WASMModuleInstanceCommon = struct_WASMModuleInstanceCommon# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 67

wasm_section_t = struct_wasm_section_t# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 75

WASMExecEnv = struct_WASMExecEnv# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 86

MemAllocOption = union_MemAllocOption# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 124

mem_alloc_info_t = struct_mem_alloc_info_t# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 132
